[gd_scene load_steps=2 format=3 uid="uid://bkgcab4wbckbx"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_47dse"]

[node name="Main Menu" type="Control" node_paths=PackedStringArray("join_button", "host_button", "ip_address", "host_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_47dse")
join_button = NodePath("Panel/JoinButton")
host_button = NodePath("Panel/HostButton")
ip_address = NodePath("Panel/IPAddress")
host_label = NodePath("Panel/HostLabel")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.0
offset_top = -182.0
offset_right = 232.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2

[node name="JoinButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -25.0
offset_right = -91.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
text = "Join"

[node name="HostButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 73.0
offset_top = -25.0
offset_right = 161.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
text = "Host"

[node name="IPAddress" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 97.0
offset_right = 164.0
offset_bottom = 132.0
placeholder_text = "IP Address"
max_length = 15
expand_to_text_length = true
virtual_keyboard_type = 3
clear_button_enabled = true

[node name="HostLabel" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -11.5
offset_right = 130.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Please wait for a client to connect..."

[connection signal="pressed" from="Panel/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Panel/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="text_submitted" from="Panel/IPAddress" to="." method="_on_ip_address_text_submitted"]
